testsuite/veronac/features/compile-fail/when.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// Example using when 
class NotLog
{
}

class Log
{
  bar() {}
}

class LogMessage
{
  run (self: iso, l: Log & mut)
  {
  }
}

class Tests
{
  run (self: iso, l: Log & mut)
  {
  }

  create(v: U64): LogMessage & iso
  {
    var a = new LogMessage;
    a
  }
}

class Main
{
// CHECK: .*error: Inference failed for method test1
  test1(r: cown[Log] & imm, m: LogMessage & mut)
  {
    when (var a = r) { m.run(a) };
  }

// CHECK-L: error: Inference failed for method test2
  test2(r: cown[NotLog] & imm, m: LogMessage & iso)
  {
    when (var a = r) { m.run(a) };
  }

  test3(r: cown[Log] & imm, m: LogMessage & iso)
  {
// CHECK-L: ${CHECKFILE_ABS_PATH}:${LINE:+7}:5: error: Cannot use variable 'm'
// CHECK-L:    when (var a = r) { m.run(a) };
// CHECK-L:    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// CHECK-L: ${CHECKFILE_ABS_PATH}:${LINE:+3}:5: note: 'm' was previously consumed here
// CHECK-L: when (var a = r) { m.run(a) };
// CHECK-L: ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    when (var a = r) { m.run(a) };
    when (var a = r) { m.run(a) };
  }

  main()
  {
  }
}
